# llm

./: .llmrc.example.json  .llmrc.example.yaml  CONTRIBUTING.md  README.md  test_gpu_info.sh  test_gpu_profiling.cu  test_layer_distribution.sh
.github/: UPSTREAM_SYNC.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: llm-cli-ci.yml  llm-cli-release.yml
common/: CMakeLists.txt  arg.cpp  common.cpp  common.h  log-ex-demo.cpp  log-ex.cpp  log-ex.h  metrics-aggregator.cpp  metrics-aggregator.h  metrics-demo.cpp  metrics-gpu.cpp  metrics-gpu.h  metrics.cpp  metrics.h
common/cli-framework/: CMakeLists.txt  README.md  main_wrapper.cpp
common/cli-framework/commands/: generate_command.cpp  generate_command.h  gpu_info_command.cpp  gpu_info_command.h  gpu_info_cuda.cu  gpu_info_cuda.h
common/cli-framework/core/: application.cpp  application.h  command.cpp  command.h  registry.h
common/cli-framework/utils/: config.cpp  config.h
docs/: GPU_INFO_COMMAND.md  GPU_PROFILING.md  logging-guide.md  metrics-guide.md
ggml/src/ggml-cuda/: common.cuh  ggml-cuda.cu  gpu-profiler.cu  gpu-profiler.cuh
include/: llama.h
src/: CMakeLists.txt  llama-model.cpp
src/log/: CMakeLists.txt  log-ex.cpp  log-ex.h
src/orchestration/: adaptive_layer_redistributor.cpp  adaptive_layer_redistributor.h  advanced_metrics.cpp  advanced_metrics.h  cuda_gpu_profiler.cpp  cuda_gpu_profiler.h  generic_gpu_profiler.cpp  generic_gpu_profiler.h  ggml_gpu_profiler.cpp  ggml_gpu_profiler.h  gpu_architecture_analyzer.cpp  gpu_architecture_analyzer.h  gpu_profiler.cpp  gpu_profiler.h  gpu_profiler_factory.cpp  gpu_profiler_factory.h  gpu_profiler_interface.h  layer_distributor.cpp  layer_distributor.h  metrics.cpp  metrics.h  orchestration_logger.cpp  orchestration_logger.h  rocm_gpu_profiler.cpp  rocm_gpu_profiler.h  runtime_performance_monitor.cpp  runtime_performance_monitor.h  unified_gpu_profiler.cpp  unified_gpu_profiler.h
tools/: CMakeLists.txt
tools/llm/: CMakeLists.txt  main.cpp
